[gd_scene load_steps=49 format=2]

[ext_resource path="res://src/titleScreen/HomeScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight4.png" type="Texture" id=2]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight8.png" type="Texture" id=3]
[ext_resource path="res://assets/imgs/enemy/xEnemyBat/sprite_3.png" type="Texture" id=4]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight6.png" type="Texture" id=5]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight1.png" type="Texture" id=6]
[ext_resource path="res://assets/imgs/enemy/xEnemyBat/sprite_5.png" type="Texture" id=7]
[ext_resource path="res://assets/imgs/enemy/xEnemy/smartXEnemy1.png" type="Texture" id=8]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight2.png" type="Texture" id=9]
[ext_resource path="res://assets/imgs/enemy/xEnemy/smartXEnemy4.png" type="Texture" id=10]
[ext_resource path="res://assets/imgs/enemy/yEnemyBat/smartYbat1.png" type="Texture" id=11]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight0.png" type="Texture" id=12]
[ext_resource path="res://assets/imgs/enemy/yEnemyBat/smartYbat2.png" type="Texture" id=13]
[ext_resource path="res://assets/imgs/enemy/xEnemy/smartXEnemy2.png" type="Texture" id=14]
[ext_resource path="res://assets/imgs/enemy/xEnemyBat/sprite_4.png" type="Texture" id=15]
[ext_resource path="res://assets/imgs/enemy/xEnemyBat/sprite_2.png" type="Texture" id=16]
[ext_resource path="res://assets/imgs/enemy/xEnemyBat/sprite_1.png" type="Texture" id=17]
[ext_resource path="res://assets/imgs/enemy/yEnemy/smartYEnemy0.png" type="Texture" id=18]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight7.png" type="Texture" id=19]
[ext_resource path="res://assets/imgs/enemy/xEnemyBat/sprite_0.png" type="Texture" id=20]
[ext_resource path="res://assets/imgs/enemy/yEnemyBat/smartYbat6.png" type="Texture" id=21]
[ext_resource path="res://assets/imgs/enemy/yEnemy/smartYEnemy1.png" type="Texture" id=22]
[ext_resource path="res://assets/imgs/enemy/yEnemyBat/smartYbat5.png" type="Texture" id=23]
[ext_resource path="res://assets/imgs/enemy/yEnemyBat/smartYbat4.png" type="Texture" id=24]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight5.png" type="Texture" id=25]
[ext_resource path="res://assets/imgs/enemy/yEnemy/smartYEnemy2.png" type="Texture" id=26]
[ext_resource path="res://assets/imgs/enemy/areaEffectEnemy/areaEffectEnemy4.png" type="Texture" id=27]
[ext_resource path="res://assets/imgs/enemy/areaEffectEnemy/areaEffectEnemy0.png" type="Texture" id=28]
[ext_resource path="res://assets/imgs/enemy/areaEffectEnemy/areaEffectEnemy1.png" type="Texture" id=29]
[ext_resource path="res://assets/imgs/enemy/dumbEnemy/dumbEnemyRight3.png" type="Texture" id=30]
[ext_resource path="res://assets/imgs/enemy/xEnemy/smartXEnemy0.png" type="Texture" id=31]
[ext_resource path="res://assets/imgs/enemy/xEnemy/smartXEnemy3.png" type="Texture" id=32]
[ext_resource path="res://assets/imgs/enemy/yEnemy/smartYEnemy3.png" type="Texture" id=33]
[ext_resource path="res://assets/imgs/enemy/areaEffectEnemy/areaEffectEnemy3.png" type="Texture" id=34]
[ext_resource path="res://assets/imgs/enemy/yEnemyBat/smartYbat0.png" type="Texture" id=35]
[ext_resource path="res://assets/imgs/enemy/yEnemyBat/smartYbat3.png" type="Texture" id=36]
[ext_resource path="res://assets/imgs/enemy/areaEffectEnemy/areaEffectEnemy2.png" type="Texture" id=37]
[ext_resource path="res://assets/text/Kenney Mini Square.ttf" type="DynamicFontData" id=38]
[ext_resource path="res://assets/btns/Pressed.tres" type="StyleBox" id=39]
[ext_resource path="res://assets/btns/Normal.tres" type="StyleBox" id=40]
[ext_resource path="res://assets/btns/Hover.tres" type="StyleBox" id=41]
[ext_resource path="res://assets/btns/Disabled.tres" type="StyleBox" id=42]
[ext_resource path="res://assets/text/basic32.tres" type="DynamicFont" id=43]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 38 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 30 ), ExtResource( 2 ), ExtResource( 25 ), ExtResource( 5 ), ExtResource( 19 ), ExtResource( 3 ) ],
"loop": true,
"name": "1",
"speed": 20.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 27 ) ],
"loop": true,
"name": "2",
"speed": 20.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 32 ), ExtResource( 10 ) ],
"loop": true,
"name": "3",
"speed": 20.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 33 ) ],
"loop": true,
"name": "5",
"speed": 20.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 36 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 21 ) ],
"loop": true,
"name": "6",
"speed": 20.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 7 ) ],
"loop": true,
"name": "4",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 64
outline_color = Color( 1, 0.0627451, 0.0627451, 1 )
font_data = ExtResource( 38 )

[node name="HomeScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="playButton" type="Button" parent="."]
margin_left = 83.6289
margin_top = 335.903
margin_right = 243.629
margin_bottom = 423.903
custom_styles/hover = ExtResource( 41 )
custom_styles/pressed = ExtResource( 39 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 42 )
custom_styles/normal = ExtResource( 40 )
custom_fonts/font = SubResource( 2 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsButton" type="Button" parent="."]
margin_left = 83.0654
margin_top = 495.823
margin_right = 371.065
margin_bottom = 583.823
custom_styles/hover = ExtResource( 41 )
custom_styles/pressed = ExtResource( 39 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = ExtResource( 42 )
custom_styles/normal = ExtResource( 40 )
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1080.23, 484.951 )
scale = Vector2( 8.8874, 8.8874 )
frames = SubResource( 4 )
animation = "6"
playing = true
flip_h = true

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 78.0
margin_top = 42.0
margin_right = 654.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 5 )
text = "A small FPS game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label2" type="Label" parent="."]
margin_left = 954.0
margin_top = 668.0
margin_right = 1266.0
margin_bottom = 708.0
custom_fonts/font = ExtResource( 43 )
text = "A work by NAD LABS"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="settingsButton" to="." method="_on_settingsButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
